--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.141.0",
     "vue": "^2.6.14",
+    "vue-server-renderer": "^2.6.14", 
     "vue-scrollto": "^2.18.2",
     "vue-template-compiler": "^2.6.12"
   },
