--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.143.0",
     "vue": "^2.7.10",
+    "vue-carousel": "^0.18.0",
     "vue-scrollto": "^2.18.2"
   },
   "devDependencies": {
