--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "nuxt": "^2.16.0",
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.143.0",
+    "uuid": "^9.0.0",
     "vue": "^2.7.10",
     "vue-carousel": "^0.18.0",
     "vue-scrollto": "^2.20.0"
