--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nuxtjs/google-gtag": "^1.0.4",
     "@nuxtjs/vuetify": "^1.12.3",
     "@playwright/test": "^1.29.2",
+    "@types/uuid": "^9.0.1",
     "@vue/test-utils": "^1.0.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.0.1",
