--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.143.0",
     "uuid": "^9.0.0",
-    "vue": "^2.7.10",
-    "vue-scrollto": "^2.20.0"
+    "vue": "^2.7.10"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
