Revert "del: vue-scrollto"
This reverts commit 9b010a5edd4080299cfa6c5f43920c46cdf8fe70.

--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "nuxt-fontawesome": "^0.4.0",
     "three": "^0.143.0",
     "uuid": "^9.0.0",
-    "vue": "^2.7.10"
+    "vue": "^2.7.10",
+    "vue-scrollto": "^2.20.0"
   },
   "devDependencies": {
     "@nuxtjs/google-analytics": "^2.4.0",
